<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/photo_pick_dp_48"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/pickRlTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/photo_pick_dp_48"
        android:background="@color/color_black_6"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/pickTvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/photo_pick_name"
            android:padding="@dimen/photo_pick_dp_15"
            android:src="@drawable/photo_pick_arrow_left" />

        <TextView
            android:id="@+id/pickTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="@dimen/photo_pick_dp_2"
            android:drawableRight="@drawable/photo_pick_arrow_down"
            android:ellipsize="end"
            android:gravity="center"
            android:maxEms="11"
            android:padding="@dimen/photo_pick_dp_6"
            android:text="@string/photo_pick_camera_roll"
            android:textColor="@color/photo_pick_white"
            android:textSize="@dimen/photo_pick_sp_17" />

        <TextView
            android:id="@+id/pickTvCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="@dimen/photo_pick_dp_10"
            android:text="@string/photo_pick_cancel"
            android:textColor="@color/photo_pick_white"
            android:textSize="@dimen/photo_pick_sp_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_white_3" />
</LinearLayout>

